--- a/hosts.ini
+++ b/hosts.ini
@@ -1,8 +1,8 @@
-[wordpress_nodes]
-18.184.244.17 ansible_user=ec2-user
+[web_nodes]
+35.158.192.20 ansible_user=ec2-user
 
 [db_nodes]
-18.195.186.80 ansible_user=ec2-user
+18.194.139.225 ansible_user=ec2-user
 
 [stats_nodes]
-52.59.239.10 ansible_user=ec2-user
+3.120.238.185 ansible_user=ec2-user
