--- a/templates/telegraf_db.conf
+++ b/templates/telegraf_db.conf
@@ -7,8 +7,8 @@
 
 [[inputs.disk]]
 
-[[inputs.apache]]
-  urls = ["http://{{apache_ip}}"]
+[[inputs.mysql]]
+  servers = ["tcp({{db_ip}})/"]
 
 [outputs.influxdb]
   urls = ["http://{{metrics_strorages_ip}}:8006"]
