--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -1,15 +1,18 @@
 [agent]
-  interval = "10s"
-  hostname = "my-app-1"
-[input.cpu]  
-   percpu = true
-[inputs.mem]
+    interval = "10s"
+    hostname = "my-app-1"
+
+[[outputs.influxdb]]
+    urls = ["http://{{  metrics_strorages_ip }}:8086"]
+    database = "metrics"
+    
+[[inputs.cpu]]
+    percpu = true
+    
+[[inputs.mem]]
 
 [[inputs.disk]]
 
 [[inputs.apache]]
   urls = ["http://{{apache_ip}}"]
 
-[outputs.influxdb]
-  urls = ["http://{{metrics_strorages_ip}}:8006"]
-  database = "metrics"
