--- a/templates/telegraf_db.conf
+++ b/templates/telegraf_db.conf
@@ -1,6 +1,11 @@
 [agent]
   interval = "10s"
   hostname = "my-app-1"
+  
+[[outputs.influxdb]]
+    urls = ["http://{{  metrics_strorages_ip }}:8086"]
+    database = "metrics2"
+    
 [input.cpu]  
    percpu = true
 [inputs.mem]
@@ -10,6 +15,3 @@
 [[inputs.mysql]]
   servers = ["tcp({{db_ip}})/"]
 
-[outputs.influxdb]
-  urls = ["http://{{metrics_strorages_ip}}:8006"]
-  database = "metrics"
