--- a/tasks/manage-telegraf_db.yml
+++ b/tasks/manage-telegraf_db.yml
@@ -6,7 +6,7 @@
 - name: copy configuration file
   template:
     src: templates/telegraf_db.conf
-    dest: /etc/telegraf/telegraf_.conf
+    dest: /etc/telegraf/telegraf.conf
 - name: making sure that telegraf is working
   service:
     name: telegraf
