--- a/install_env.yml
+++ b/install_env.yml
@@ -7,29 +7,32 @@
     db_user: "user_{{db_name}}"
     db_pwd: "1234"
     telegraf_url: https://dl.influxdata.com/telegraf/releases/telegraf-1.8.3-1.x86_64.rpm
-    metrics_strorages_ip: 172.31.28.215
-    db_ip: 172.31.17.131
-    apache_ip: 35.158.192.20
+    metrics_strorages_ip: 172.31.25.95
+    db_ip: 35.158.95.114
+    apache_ip: 172.31.25.140
   tasks:
     - include_tasks: tasks/os_dependencies.yml
     - include_tasks: tasks/wp-install.yml
     - include_tasks: tasks/manage-telegraf.yml 
+    
 - hosts: db_nodes
   become: yes
   vars:
     db_name: hello_db
     db_user: "user_{{db_name}}"
     db_pwd: "1234"
-    metrics_strorages_ip: 172.31.28.215
-    db_ip: 172.31.17.131
+    metrics_strorages_ip: 172.31.25.95
+    db_ip: 35.158.95.114
     telegraf_url: https://dl.influxdata.com/telegraf/releases/telegraf-1.8.3-1.x86_64.rpm
   tasks:
     - include_tasks: tasks/manage-db.yml
     - include_tasks: tasks/manage-telegraf_db.yml 
+    
 - hosts: stats_nodes
   become: yes
   vars:
     influxdb_url: https://dl.influxdata.com/influxdb/releases/influxdb-1.7.1.x86_64.rpm
     grafana_url: https://s3-us-west-2.amazonaws.com/grafana-releases/release/grafana-5.3.4-1.x86_64.rpm
+    grafana_ip: 
   tasks:
     - include_tasks: tasks/stats.yml
