--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -1,10 +1,10 @@
 [agent]
     interval = "10s"
-    hostname = "my-app-1"
+    hostname = "apache_metrics"
 
 [[outputs.influxdb]]
     urls = ["http://{{  metrics_strorages_ip }}:8086"]
-    database = "metrics"
+    database = "apache_metrics"
     
 [[inputs.cpu]]
     percpu = true
@@ -14,5 +14,5 @@
 [[inputs.disk]]
 
 [[inputs.apache]]
-  urls = ["http://{{apache_ip}}"]
+
 
