--- a/templates/telegraf_db.conf
+++ b/templates/telegraf_db.conf
@@ -1,10 +1,10 @@
 [agent]
   interval = "10s"
-  hostname = "my-app-1"
+  hostname = "mysql_metrics"
   
 [[outputs.influxdb]]
-    urls = ["http://{{  metrics_strorages_ip }}:8086"]
-    database = "metrics2"
+    urls = ["http://{{metrics_strorages_ip }}:8086"]
+    database = "mysql_metrics"
     
 [input.cpu]  
    percpu = true
