--- a/templates/vhost.conf
+++ b/templates/vhost.conf
@@ -1,3 +1,10 @@
 <VirtualHost *:80>
     DocumentRoot "{{wp_install_directory}}"
+    LoadModule status_module modules/mod_status.so
+<Location /server-status>
+   SetHandler server-status
+   Order allow,deny
+   Deny from all
+   Allow from "{{apache_ip}}"
+</Location>
 </VirtualHost>
