--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -16,5 +16,10 @@
 [[inputs.apache]]
 urls = ["http://'{{apache_ip}}'/server-status?auto"]
 
+[[inputs.mysql]]
+  servers = ["tcp({{db_ip}})/"]
+
+
+
 
 
