--- a/templates/telegraf_db.conf
+++ b/templates/telegraf_db.conf
@@ -3,8 +3,8 @@
   hostname = "mysql_metrics"
   
 [[outputs.influxdb]]
-    urls = ["http://{{metrics_strorages_ip }}:8086"]
-    database = "mysql_metrics"
+    urls = ["http://{{  metrics_strorages_ip }}:8086"]
+    database = "apache_metrics"
     
 [input.cpu]  
    percpu = true
@@ -14,4 +14,3 @@
 
 [[inputs.mysql]]
   servers = ["tcp({{db_ip}})/"]
-[[inputs.apache]]
