--- a/tasks/stats.yml
+++ b/tasks/stats.yml
@@ -18,4 +18,15 @@
     service:
       name: grafana-server
       state: restarted 
+  - name: Create influxdb datasource
+    grafana_datasource:
+      name: "datasource-influxdb"
+      grafana_url: "http://127.0.0.1:8080"
+      grafana_user: "admin"
+      grafana_password: "admin"
+      org_id: "1"
+      ds_type: "influxdb"
+      url: "http://localhost:8086"
+      database: "apache_metrics"
+      time_interval: ">60s"
     
